--- a/code/read_data.ipynb
+++ b/code/read_data.ipynb
@@ -9,7 +9,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import pickle"
    ]
   },
   {
@@ -877,12 +878,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save Data as ``.pickle``"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test"
+    "pickle.dump( [P,F], open( \"../data/save.p\", \"wb\" ) )"
    ]
   }
  ],
