code to the main directory; src folder contains the packages.

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -10,7 +10,9 @@
     "import pandas as pd\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle"
+    "import pickle\n",
+    "\n",
+    "from src.sharpe_simulation import *"
    ]
   },
   {
@@ -19,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[P,F] = pickle.load( open(\"../data/save.p\", \"rb\") )"
+    "[P,F] = pickle.load( open(\"./data/save.p\", \"rb\") )"
    ]
   }
  ],
