--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "f = pd.read_csv(\"../data/factor/ff_factors.csv\", index_col=0)\n",
+    "f = pd.read_csv(\"./data/factor/ff_factors.csv\", index_col=0)\n",
     "f.index = pd.date_range(start=\"1963-07-31\",end=\"2021-02-28\",freq='M')\n",
     "f = f.loc[d1:d2]\n",
     "f = f/100\n",
@@ -618,7 +618,7 @@
     }
    ],
    "source": [
-    "ff25 = pd.read_csv(\"../data/portfolio/FF25.csv\", index_col=0)\n",
+    "ff25 = pd.read_csv(\"./data/portfolio/FF25.csv\", index_col=0)\n",
     "ff25.index = pd.date_range(start=\"1926-07-31\",end=\"2021-03-31\",freq='M')\n",
     "ff25 = ff25.loc[d1:d2]\n",
     "ff25 = ff25/100\n",
@@ -852,7 +852,7 @@
     }
    ],
    "source": [
-    "me10 = pd.read_csv(\"../data/portfolio/size_sort_port.csv\", index_col=0)\n",
+    "me10 = pd.read_csv(\"./data/portfolio/size_sort_port.csv\", index_col=0)\n",
     "me10 = me10[['Lo 10', 'Dec-02', 'Dec-03', 'Dec-04', 'Dec-05', \n",
     "                'Dec-06','Dec-07', 'Dec-08', 'Dec-09', 'Hi 10']]\n",
     "me10.index = pd.date_range(start=\"1926-07-31\",end=\"2021-04-30\",freq='M')\n",
@@ -890,7 +890,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump( [P,F], open( \"../data/save.p\", \"wb\" ) )"
+    "pickle.dump( [P,F], open( \"./data/save.p\", \"wb\" ) )"
    ]
   }
  ],
