demo: conditional number of covariance matrix.
Signed-off-by: HE Xin <xinhe28@ad.cityu.edu.hk>

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "[P,F] = pickle.load( open(\"./data/save.p\", \"rb\") )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ME10', 'FF25', 'IND10', 'IND30', 'IND49', 'PT23', 'MAPT18'])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "478.2466497557545"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "me10 = P['ME10']\n",
+    "sigma = me10.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "732.5074964295895"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ff25 = P['FF25']\n",
+    "sigma = ff25.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25.647838639893592"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind10 = P['IND10']\n",
+    "sigma = ind10.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "144.4129273534867"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind30 = P['IND30']\n",
+    "sigma = ind30.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "232.037421122593"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ind49 = P['IND49']\n",
+    "sigma = ind49.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110.83425938189296"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pt23 = P['PT23']\n",
+    "sigma = pt23.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.96751977240807"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mapt18 = P['MAPT18']\n",
+    "sigma = mapt18.cov()\n",
+    "eigV = np.linalg.eig(sigma)[0]\n",
+    "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
