--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,12 @@
     "import matplotlib.pyplot as plt\n",
     "import pickle\n",
     "\n",
-    "from src.sharpe_simulation import *"
+    "# from src.sharpe_simulation import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "dict_keys(['ME10', 'FF25', 'IND10', 'IND30', 'IND49', 'PT23', 'MAPT18'])"
-      ]
+      "text/plain": "dict_keys(['ME10', 'FF25', 'IND10', 'IND30', 'IND49', 'PT23', 'MAPT18'])"
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,16 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "478.2466497557545"
-      ]
+      "text/plain": "478.2466497557425"
      },
-     "execution_count": 74,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,16 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "732.5074964295895"
-      ]
+      "text/plain": "732.5074964295876"
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,16 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "25.647838639893592"
-      ]
+      "text/plain": "25.647838639893568"
      },
-     "execution_count": 76,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,16 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "144.4129273534867"
-      ]
+      "text/plain": "144.41292735348642"
      },
-     "execution_count": 77,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,16 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "232.037421122593"
-      ]
+      "text/plain": "232.0374211225932"
      },
-     "execution_count": 78,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,16 +149,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "110.83425938189296"
-      ]
+      "text/plain": "110.83425938189343"
      },
-     "execution_count": 79,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,16 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "88.96751977240807"
-      ]
+      "text/plain": "88.96751977240827"
      },
-     "execution_count": 80,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,6 +187,15 @@
     "sigma = mapt18.cov()\n",
     "eigV = np.linalg.eig(sigma)[0]\n",
     "eigV[0] / eigV[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test"
    ]
   },
   {
@@ -218,8 +211,8 @@
    "hash": "9387e9e37a0af8fff0fcbade4737076ebc87d0c8fec44545ee3d2fd05cdc73df"
   },
   "kernelspec": {
-   "display_name": "Python 3.6.5 64-bit ('base': conda)",
-   "name": "python3"
+   "display_name": "Python 3.8.5 64-bit ('cvxpy': conda)",
+   "name": "python385jvsc74a57bd0970838b5de48db32d28dc5683736c074ed63d08f161f11bf4818e0c5d3e711bd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -231,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.5"
   },
   "orig_nbformat": 4
  },
