--- a/demo.ipynb
+++ b/demo.ipynb
@@ -203,7 +203,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# test 2"
+   ]
   }
  ],
  "metadata": {
